Lots of Dependency added for future startup code base

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Deliman Rider</string>
+    <string name="app_name">Starter App</string>
     <string name="title_activity_splash">SplashActivity</string>
 </resources>
