--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Starter App</string>
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="hello_title">\"Hello Tray\"</string>
+    <string name="hello_message">\"Hi there! welcome to app dev\"</string>
 </resources>
