--- a/libUI/src/main/res/values/strings.xml
+++ b/libUI/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">libshared</string>
+    <string name="app_name">libui</string>
     <string name="go">Go</string>
 </resources>
